<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginScreenTitle"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline5"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.8"
            android:text="@string/authHint"
            android:textAppearance="?textAppearanceBody1" />

        <EditText
            android:id="@+id/loginEmailEt"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:gravity="right|center_vertical"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/loginPassEt"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:gravity="right|center_vertical"
            android:hint="@string/password"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/Theme.Nike.AuthTheme.Button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/login" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpHint"
            android:textAppearance="?textAppearanceBody1"
            android:alpha="0.4"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpLinkBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/signUp" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>