<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:scaleType="centerInside"
            app:shapeAppearance="@style/Avatar"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_nike_logo" />

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/guestUser"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="8dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:divider="@drawable/shape_divider"
        android:showDividers="middle|beginning|end"
        android:orientation="vertical">
        <TextView
            android:id="@+id/favoriteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            style="@style/profileLinks"
            app:drawableStartCompat="@drawable/ic_favorites24dp" />
        <TextView
            android:id="@+id/orderHistoryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderHistory"
            style="@style/profileLinks"
            app:drawableStartCompat="@drawable/ic_order_history" />
        <TextView
            android:id="@+id/authBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            style="@style/profileLinks"
            app:drawableStartCompat="@drawable/ic_sign_in" />


    </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>