<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools">

    <com.example.nikeshop.customView.LockableScrollView
        android:id="@+id/lockableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_nike_logo" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/searchEt"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/background_et_search"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical|start"
                    android:hint="@string/search"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="?colorOnSurface"
                    android:textColorHint="?android:textColorSecondary"
                    android:textDirection="rtl"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/cancelSearchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="32dp"
                    android:padding="4dp"

                    android:visibility="gone"
                    tool:visibility="visible"
                    app:srcCompat="@drawable/ic_outline_cancel_24" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/bannerSliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="12dp"
                    app:dotsColor="#E0DCDC"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="5dp"
                    app:dotsSpacing="3dp"
                    app:dotsStrokeWidth="4dp"
                    app:dotsWidthFactor="4"
                    app:progressMode="false"
                    app:selectedDotColor="@color/black" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/latest"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewLatestProductBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/viewAll" />


            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestProductsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/popular"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewPopularProductBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/viewAll" />


            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularProductsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/sortPriceHighToLow"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewLowerPriceProductBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/viewAll" />


            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lowPriceProductsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/sortPriceLowToHigh"
                    android:textAppearance="?textAppearanceBody1"
                    android:textColor="?android:textColorSecondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewHigherPriceProductBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/viewAll" />


            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/highPriceProductsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

        </LinearLayout>


    </com.example.nikeshop.customView.LockableScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>